Closed
Bug 546358
Opened 16 years ago
Closed 16 years ago
With Flashblock enabled, Silverlight content is not visible. No way to unblock it.
Categories
(Camino Graveyard :: Annoyance Blocking, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: phiw2, Assigned: chris)
References
()
Details
(Keywords: regression, Whiteboard: [camino-2.0.2])
Attachments
(1 file, 1 obsolete file)
|
13.64 KB,
patch
|
chris
:
superreview+
|
Details | Diff | Splinter Review |
STR:
1. enable Flashblock
2. load URL
AR: only a fragment of the page is visible. mousing over the middle of the page shows a tooltip. Clicking on it does nothing.
ER: a visible overlay / something to unblock the movie
This is a side effect of bug 537993 (Flashblock 1.5.12)
When I read the Flashblock code for the upgrade, it seemed to me that we'd have to pass Flashblock.xml a "true" value for the equivalent of the variable Flashblock.js sets when it reads the flashblock.silverlight.blocked pref[1] in order to get Silverlight to be blocked. Did I miss something (like an assumption somewhere that the variable is "true" when not set)?
[1]
http://www.mozdev.org/source/browse/flashblock/source/content/flashblock/flashblock.js.diff?r1=1.44.2.33;r2=1.44.2.34;only_with_tag=FLASHBLOCK_1_5_CLEANUP_BRANCH;f=h
This is bad, and needs to block 2.0.2 :(
We either need to
1) back-out bug 537993 and revise the release notes, or
2) back out the Silverlight part of bug 537993, or
3) fix our Cocoa code to always send a "false" to Flashblock.xml, or
4) completely implement support for the flashblock.silverlight.blocked pref (and package the silverplay.png file)
I guess I'll start working on 2.
Blocks: 537993
Flags: camino2.0.2+
Flags: camino1.6.11?
Keywords: regression
Summary: With Flash block enabled, Silverlight content is not visible. No way to unblock it. → With Flashblock enabled, Silverlight content is not visible. No way to unblock it.
Comment 2•16 years ago
|
||
Oops sorry for not making clear that due to demand I've started blocking Silverlight as well. Apologies.
Comment 3•16 years ago
|
||
Removing this bit from the flashblock.css should remove Silverlight blocking:
/*
* Silverlight identifiers.
*/
object[classid*="32C73088-76AE-40F7-AC40-81F62CB2C1DA"],
object[type="application/ag-plugin"],
object[type="application/x-silverlight"],
object[type="application/x-silverlight-2"],
object[source*=".xaml"],
object[sourceelement*="xaml"],
object[data*="application/x-silverlight"],
embed[type="application/ag-plugin"],
embed[source*=".xaml"]
{ -moz-binding: url("chrome://flashblock/content/flashblock.xml#silverlight") !important; }
| Assignee | ||
Comment 4•16 years ago
|
||
Adds the Silverblock preference and associated event handlers. Due to a bug in the current Flashblock, which doesn't load the blocked object when the placeholder is clicked, we always allow Silverlight objects.
Once the Flashblock bug is fixed we can preventDefault depending on the state of the preference.
Assignee: nobody → trendyhendy2000
Status: NEW → ASSIGNED
Attachment #427075 -
Flags: review?(stuart.morgan+bugzilla)
| Reporter | ||
Comment 5•16 years ago
|
||
For reference, I reported the Flashblock bug as
https://www.mozdev.org/bugs/show_bug.cgi?id=22469
Comment 6•16 years ago
|
||
Comment on attachment 427075 [details] [diff] [review]
Fix v1.0
r=smorgan. Maybe put a comment in the method explaining why you are calling it unconditionally at the moment?
Attachment #427075 -
Flags: superreview?(mikepinkerton)
Attachment #427075 -
Flags: review?(stuart.morgan+bugzilla)
Attachment #427075 -
Flags: review+
Comment 7•16 years ago
|
||
Comment on attachment 427075 [details] [diff] [review]
Fix v1.0
sr=pink
Updated•16 years ago
|
Attachment #427075 -
Flags: superreview?(mikepinkerton) → superreview+
| Assignee | ||
Comment 8•16 years ago
|
||
Adds a comment to |onSilverblockCheck|. Same as v1.0 otherwise.
Attachment #427075 -
Attachment is obsolete: true
Attachment #427203 -
Flags: superreview+
Landed this on cvs trunk and the CAMINO_2_0_BRANCH in advance of Camino 2.0.2. Thanks, everyone!
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Flags: camino1.6.11? → camino1.6.11-
Resolution: --- → FIXED
Whiteboard: [camino-2.0.2]
Comment 10•16 years ago
|
||
FYI in the Flashblock cvs I have flipped the silverlight blocking default preference setting to false. It used to work but after the latest Silverlight plugin updates, blocked SL can't be unblocked.
| Reporter | ||
Comment 11•16 years ago
|
||
Verified with Version 2.1a1pre (1.9.0.19pre 2010021700).
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•