Bug 546358 - With Flashblock enabled, Silverlight content is not visible, and there is no way to unblock it. Implement support for Flashblock's Silverlight blocking, but turn it off and unconditionally allow all Silverlight movies since Flashblock's click-to-play doesn't work for many Silverlight movies.  Patch by Christopher Henderson <trendyhendy2000@gmail.com>, r=smorgan, sr=pink, a/Cm2.0.2=me