camino/src/embedding/CHBrowserListener.h
@@ -101,6 +101,7 @@ protected:
   nsresult HandleBlockedPopupEvent(nsIDOMEvent* inEvent);
   nsresult HandleLinkAddedEvent(nsIDOMEvent* inEvent);
   nsresult HandleFlashblockCheckEvent(nsIDOMEvent* inEvent);
+  nsresult HandleSilverblockCheckEvent(nsIDOMEvent* inEvent);
   void HandleFaviconLink(nsIDOMElement* inElement);
   void HandleFeedLink(nsIDOMElement* inElement);
   void HandleSearchPluginLink(nsIDOMElement* inElement);
